Java 21 -> 23