@@ -27,9 +27,9 @@
 	</profiles>
 
 	<properties>
-		<java.version>21</java.version>
-		<maven.compiler.source>21</maven.compiler.source>
-		<maven.compiler.target>21</maven.compiler.target>
+		<java.version>23</java.version>
+		<maven.compiler.source>23</maven.compiler.source>
+		<maven.compiler.target>23</maven.compiler.target>
 		<start-class>no.vinny.nightfly.NightflyApplication</start-class>
 		<jjwt.version>0.11.5</jjwt.version>
 	</properties>
@@ -151,14 +151,16 @@
                     </execution>
                 </executions>
 				<configuration>
-				  <excludes>
-					<exclude>
-					  <groupId>org.projectlombok</groupId>
-					  <artifactId>lombok</artifactId>
-					</exclude>
-				  </excludes>
-				  <jvmArguments>--enable-preview</jvmArguments>
-				  <compilerArguments>--enable-preview</compilerArguments>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+					<additionalProperties>
+						<java.source>${maven.compiler.source}</java.source>
+                		<java.target>${maven.compiler.target}</java.target>
+              		</additionalProperties>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -183,11 +185,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
-                </configuration>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
             </plugin>
         </plugins>
 	</build>
